--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,12 @@
 services:
   - type: web
-    name: tradingview-telegram-bot
+    name: trading-bot-auto
     env: python
     buildCommand: pip install -r requirements.txt
     startCommand: python main.py
     autoDeploy: true
     envVars:
-      - key: TELEGRAM_BOT_TOKEN
+      - key: TELEGRAM_TOKEN
         sync: false
       - key: TELEGRAM_CHAT_ID
         sync: false
