--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,11 @@
-
 services:
-  - type: web
+  - type: worker
     name: tradingview-bot
     env: python
-    buildCommand: "pip install -r requirements.txt"
+    buildCommand: ""
     startCommand: "python main.py"
+    envVars:
+      - key: TELEGRAM_TOKEN
+        sync: false
+      - key: TELEGRAM_CHAT_ID
+        sync: false
