--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,6 @@ services:
   - type: worker
     name: tradingview-bot
     env: python
-    buildCommand: ""
+    plan: free
+    buildCommand: "pip install -r requirements.txt"
     startCommand: "python main.py"
-    envVars:
-      - key: TELEGRAM_TOKEN
-        sync: false
-      - key: TELEGRAM_CHAT_ID
-        sync: false
